<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">hospital_client</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="doctor">doctor</string>
    <string name="patient">patient</string>
    <string name="admin">admin</string>
    <string name="login">login</string>
    <string name="photo">photo</string>
    <string name="remember">remember password</string>
    <string name="login_loging">Loginin.......</string>
    <string name="login_autoing">自动登录中......</string>
    <string name="login_nextact">进入注册界面......</string>
    <string name="login_show1">邮箱不合法</string>
    <string name="login_show2">密码不合法</string>
    <string name="login_show3">帐号不存在</string>
    <string name="login_show4">password is not correct</string>
    <string name="login_show5">you fail</string>
    <string name="login_show6">the wifi is not corrert</string>
    <string name="login_show7">You success login</string>
    <string name="login_show8">自动登录出错</string>
    <string name="login_show9">自动登录成功</string>

    <string-array name="adminmodules">
        <item>Add New Doctor Details</item>
        <item>Update Doctor Details</item>
        <item>Delete Doctor</item>
        <item>Add New Paient Details</item>
        <item>Update Patient Details</item>
        <item>Delete Patient</item>
        <item>Add New Bed Details</item>
        <item>Update Bed Details</item>
        <item>Delete Bed</item>
        <item>Assign Doctors \n Availibility</item>
        <item>View AppointMents \n seeked by patients</item>
        <item>Approve Appointments/assign time</item>
        <item>View all confirmed Appointmnets</item>
        <item>In patient Registeration(check bed availability)</item>
        <item>Billing Management</item>
        <item>Medicine management</item>
        <item>Holiday management</item>
        <item>Important Phone number management</item>
        <item>View Bed Allocations</item>
    </string-array>
    <string-array name="doctormodules">
        <item>View Todays Appointments</item>
        <item>View Medicines List</item>
        <item>View Inpatient list</item>
        <item>View Holiday List</item>
        <item>View Important Numbers</item>
    </string-array>
    <string-array name="patientmodules">
        <item>View Doctors Availibility</item>
        <item>Seek Appointment</item>
        <item>View Bills(Date Wise)</item>
        <item>View Holiday List</item>
    </string-array>

    <string name="title_activity_udd">ANDDActivity</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_activity_update_doctor">UpdateDoctorActivity</string>

</resources>