<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".Loginctivity" >

    <EditText
        android:id="@+id/login_edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_username"
        android:layout_alignBottom="@+id/login_username"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_input"
        android:ems="10"
        android:singleLine="true"
        android:textColor="#000000" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_password"
        android:layout_alignBottom="@+id/login_password"
        android:layout_alignLeft="@+id/login_edit_username"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:background="@drawable/login_input"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:layout_toLeftOf="@+id/login_edit_username"
        android:singleLine="true"
        android:text="@string/username"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_username"
        android:layout_below="@+id/login_edit_username"
        android:layout_marginTop="56dp"
        android:singleLine="true"
        android:text="@string/password"
        android:textColor="#000000" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_edit_password"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient"
            android:textColor="#000000" />
    </RadioGroup>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignRight="@+id/radiogroup"
        android:layout_below="@+id/radiogroup"
        android:layout_marginTop="61dp"
        android:gravity="center"
        android:text="Login" />

</RelativeLayout>